--- a/URCAndroid/res/values/strings.xml
+++ b/URCAndroid/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">URCAndroid</string>
@@ -18,5 +19,14 @@
     <string name="setup_device_connected">Device connected!</string>
     <string name="setup_device_connectionfailed">Device connection failed!</string>
     <string name="drive">Drive</string>
-
+    <string name="title_activity_drive">DriveActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="ToggleButton1">1</string>
+    <string name="ToggleButton2">2</string>
+    <string name="ToggleButton3">3</string>
+    <string name="ToggleButton4">4</string>
+    <string name="ToggleButton5">5</string>
+    <string name="ToggleButton6">6</string>
+    <string name="ToggleButton7">7</string>
+    <string name="ToggleButton8">8</string>
 </resources>
